postgresql-common (134wheezy5) wheezy; urgency=medium

  * pg_upgradecluster: Properly upgrade databases with non-login role owners.
    (Closes: #614374, #838812)

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 13 Oct 2016 15:32:49 +0200

postgresql-common (134wheezy4) stable; urgency=low

  * debian/supported-versions: Use "7|7.*" to recognize wheezy; point releases
    now increment the second version number component. (Closes: #712586)

 -- Christoph Berg <myon@debian.org>  Tue, 27 Aug 2013 10:15:33 +0200

postgresql-common (134wheezy3) unstable; urgency=low

  [ Christoph Berg ]
  * pg_wrapper: Document that PGHOST overrides PGCLUSTER. (Closes: #697291)
  * pg_wrapper: Skip cluster selection if --host is given on the command line.
    (Closes: #637017) While we are at it, improve --port parsing, too.
  * t/010_defaultport_cluster.t: Add test cases for the above pg_wrapper
    changes.
  * postgresql-client-common: Add Depends: netbase for getprotobyname() in
    PgCommon.pm. (Closes: #697377)

  [ Martin Pitt ]
  * debian/README.Debian: Update versions to 8.4/9.1, as current for Squeeze
    and Wheezy. (Closes: #697239)

 -- Christoph Berg <myon@debian.org>  Wed, 09 Jan 2013 17:12:54 +0100

postgresql-common (134wheezy2) unstable; urgency=low

  * debian/supported-versions: Add Debian 7.0 "wheezy" to support 9.1 only.
    This is not a functional change, but avoids the "Unknown Debian release"
    warning.
  * debian/postgresql-common.triggers: Also watch for changes in
    /usr/share/hunspell/; pg_updatedicts handles these as well. Cherry-picked
    from trunk r1217. (Closes: #689994)

 -- Martin Pitt <mpitt@debian.org>  Mon, 05 Nov 2012 08:15:34 +0100

postgresql-common (134wheezy1) unstable; urgency=low

  * debian/control: Switch Vcs-Bzr: to wheezy branch.
  * pg_ctlcluster: Fix log output to stderr if the log file started out being
    empty. Cherry-picked from trunk r1204.
  * pg_buildext: Fix supported-versions not to die when the last version is